--- a/web/web/js/jskey/themes/dialog/jskey_dialog.html
+++ b/web/web/js/jskey/themes/dialog/jskey_dialog.html
@@ -1,18 +1,27 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title></title>
-<style>body{margin:0px;padding:0px;overflow:hidden;}</style>
+<style>html,body,iframe{width:100%;height:100%;margin:0px;padding:0px;overflow:hidden;}</style>
 <script type="text/javascript">
 var winArgs=window.dialogArguments;
 var args=winArgs.args;
-var reValue;
+var reValue = null;
 window.document.title = winArgs.title;
-function closeWindow(){window.returnValue=reValue;window.close();};
-window.onunload=function(){window.returnValue=reValue;window.close();};
+var $jskey={dialog:{returnValue:{},dialogArguments:{url:winArgs.url, args:args}}};
+function closeWindow(){
+	window.returnValue=reValue||$jskey.dialog.returnValue;
+	window.close();
+};
+$jskey.dialog.close = function(){
+	closeWindow();
+};
+window.onunload=function(){
+	window.returnValue=reValue||$jskey.dialog.returnValue;
+	window.close();
+};
 window.onload=function(){window.frames[0].document.location.href=winArgs.url;};
 </script>
 </head>
-<body>
-<iframe src="" style="width:100%;height:100%;" width="100%" height="100%" frameborder="0" scrolling="auto"></iframe>
-</body>
+<body><iframe src="" width="100%" height="100%" frameborder="0" scrolling="auto"></iframe></body>
 </html>
