--- a/web/web/js/jskey/demo/jskey_dialog_demo.html
+++ b/web/web/js/jskey/demo/jskey_dialog_demo.html
@@ -9,9 +9,14 @@
 		hr {}
 	</style>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link rel="stylesheet" type="text/css" href="../../easyui//themes/default/easyui.css">
+	<script src="../../jquery/jquery.js" type="text/javascript"></script>
+	<script src="../../easyui/jquery.easyui.js" type="text/javascript"></script>
 	<script src="../jskey_core.js" type="text/javascript"></script>
 	<script type="text/javascript">
-		
+		$jskey.dialog.callback = function(){
+			alert('返回值是:' + ($jskey.dialog.returnValue.hello));
+		};
 	</script>
 </head>
 <body>
@@ -19,12 +24,17 @@
 <br /><br /><!--##########################################################################################-->
 
 <div class="box">
+	<div class="title">$jskey.dialog.showDialog</div>
+	
+	<br /><hr /><br />
+	<input type="button" value="对话框" onclick="$jskey.dialog.showDialog({title:'我的标题', url:'jskey_dialog_demo_return.html',args:{v:1}});" /> 绝对路径<br />
+	<br /><hr /><br />
+
 	<div class="title">window.showModalDialog</div>
 	
 	<br /><hr /><br />
-	<input type="button" value="我的对话框" onclick="$jskey.dialog.show({url:'jskey_dialog_demo_return.html',title:'我的标题'});" /> 相对路径<br />
 	<input type="button" value="我的对话框" onclick="$jskey.dialog.show({title:'我的标题', url:'http://www.baidu.com/',args:{v:1}});" /> 绝对路径<br />
-	<input type="button" value="我的返回值" onclick="alert('返回值是:' + ($jskey.dialog.show({title:'我的百度', url:'jskey_dialog_demo_return.html',args:{v:2}})).hello);" /> 相对路径<br />
+	<input type="button" value="我的返回值" onclick="alert($jskey.dialog.show({title:'我的百度', url:'jskey_dialog_demo_return.html',args:{v:1}})  );" /> 相对路径<br />
 	<br /><hr /><br />
 
 	<div class="title">window.open</div>
@@ -37,9 +47,8 @@
 		 * 调用对象：$jskey.dialog
 		 */
 		/**************************************************************/
-		/*模式对话框调用方法*/
+		/*div对话框调用方法*/
 		/**************************************************************/
-		
 		/**
 		 * 封装jquery.easyui的dialog(需要jquery和jquery.easyui支持)
 		 * 调用方法:$jskey.dialog.showDialog(args);
@@ -61,7 +70,7 @@
 		/*模式对话框调用方法*/（firefox可能不再支持）
 		/**************************************************************/
 		/**
-		 * 弹出模式对话框（不建议使用，用showDialog替代）
+		 * 弹出模式对话框<span style="color:#FF0000;">（不建议使用，用showDialog替代，使用方法一致）</span>
 		 * 调用方法:$jskey.dialog.show(args);
 		 *   args：默认为{},内容为key:value
 		 * @key:
@@ -75,52 +84,14 @@
 		 * scroll=(auto,no,yes) 是否显示滚动条
 		 * resizable=(yes,no,auto) 是否可改变窗口大小
 		 * @return 子页面调用parent.$jskey.dialog.returnValue="anything";
-		 * 调用页取返回值var re = show({});
+		 * 调用页取返回值:重载$jskey.dialog.callback = function(){alert($jskey.dialog.returnValue)};
+		 * 注意，窗口关闭后，在show方法返回之前，会调用$jskey.dialog.callback后再返回
 		 */
 		show({})
-	
-		/**
-		 * 封装window.showModalDialog不能再使用
-		 * 调用方法:$jskey.dialog.showModalDialog(...);
-		 * @param:
-		 * url 网址
-		 * args 传递的参数(JS对象/页面对象)
-		 * width=number 宽度(单位px)
-		 * height=number 高度(单位px)
-		 * status=(no,auto,yes) 是否显示状态栏
-		 * scroll=(auto,no,yes) 是否显示滚动条
-		 * resizable=(yes,no,auto) 是否可改变窗口大小
-		 * @return window.showModalDialog;
-		 */
-		showModalDialog(url, args, width, height, status, scroll, resizable)
 		
 		/**************************************************************/
 		/*窗口调用方法*/
 		/**************************************************************/
-		
-		/**
-		 * 封装window.open
-		 * 调用方法:$jskey.dialog.openWindow(...);
-		 * @param:
-		 * url 网址
-		 * target 打开的Window名称
-		 * width 宽度(单位px)
-		 * height 高度(单位px)
-		 * top=number 窗口离屏幕顶部距离(单位px)
-		 * left=number 窗口离屏幕左边距离(单位px)
-		 * status=(no/yes/0/1) 是否显示状态栏
-		 * scroll=(yes/no/1/0) 是否显示滚动条
-		 * resizable=(no/yes/0/1) 是否可改变窗口大小
-		 * menubar=(no/yes/0/1) 是否显示菜单
-		 * fullscreen=(no/yes/0/1) 是否全屏
-		 * toolbar=(no/yes/0/1) 是否显示工具条
-		 * location=(no/yes/0/1) 是否显示地址栏
-		 * directories =(no/yes/0/1) 是否显示转向按钮
-		 * channelmode=(no/yes/0/1) 是否显示频道栏
-		 * @return
-		 */
-		openWindow:function(url, target, width, height, top, left, status, scroll, resizable, menubar, fullscreen, toolbar, location, directories, channelmode)
-			
 		/**
 		 * 打开窗口
 		 * 调用方法:$jskey.dialog.open(args);
