--- a/web/web/js/jskey/demo/jskey_dialog_demo_return.html
+++ b/web/web/js/jskey/demo/jskey_dialog_demo_return.html
@@ -14,15 +14,14 @@
 		{
 			try
 			{
-				
-				var _v = parent.args.v;
-				if(_v == 2)
+				var _v = parent.$jskey.dialog.dialogArguments.args.v;
+				if(_v == 1)
 				{
 					var myValue = {hello:"hello!!"};
 					//为父页面返回值，代码为：parent.reValue=anything;
-					parent.reValue = myValue;//返回调用窗口的值，可以是任意对象，(但如果是本页面的html对象，在关闭对话框后将取不到内容)
+					parent.$jskey.dialog.returnValue = myValue;//返回调用窗口的值，可以是任意对象，(但如果是本页面的html对象，在关闭对话框后将取不到内容)
 				}
-				parent.closeWindow();
+				parent.$jskey.dialog.close();
 			}
 			catch(e)
 			{
