--- a/web/web/js/jskey/themes/dialog/jskey_dialog.html
+++ b/web/web/js/jskey/themes/dialog/jskey_dialog.html
@@ -2,13 +2,25 @@
 <html>
 <head>
 <title></title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <style>html,body,iframe{width:100%;height:100%;margin:0px;padding:0px;overflow:hidden;}</style>
 <script type="text/javascript">
-var winArgs=window.dialogArguments;
+var winArgs={args:{data:{}},url:"about:blank",title:"Window"};
+if(window.dialogArguments)
+{
+	winArgs = window.dialogArguments;
+}
+else
+{
+	alert("您的浏览器不支持此方法");
+}
+
 var args=winArgs.args;
 var reValue = null;
 window.document.title = winArgs.title;
-var $jskey={dialog:{returnValue:{},dialogArguments:{url:winArgs.url, args:args}}};
+var url = winArgs.url;
+if(url.indexOf(":") == 2 && url.indexOf("/") == 0){url = "file:\/\/" + url;}
+var $jskey={dialog:{returnValue:{},dialogArguments:{url:url, args:args}}};
 function closeWindow(){
 	window.returnValue=reValue||$jskey.dialog.returnValue;
 	window.close();
@@ -20,7 +32,7 @@ window.onunload=function(){
 	window.returnValue=reValue||$jskey.dialog.returnValue;
 	window.close();
 };
-window.onload=function(){window.frames[0].document.location.href=winArgs.url;};
+window.onload=function(){window.frames[0].location.href=url;};
 </script>
 </head>
 <body><iframe src="" width="100%" height="100%" frameborder="0" scrolling="auto"></iframe></body>
