--- a/web/web/js/jskey/themes/dialog/jskey_dialog.html
+++ b/web/web/js/jskey/themes/dialog/jskey_dialog.html
@@ -12,7 +12,7 @@ if(window.dialogArguments)
 }
 else
 {
-	alert("您的浏览器不支持此方法");
+	alert("您的浏览器不支持此方法");try{window.close();}catch(e){}
 }
 
 var args=winArgs.args;
