--- a/web/web/js/jskey/demo/jskey_dialog_demo_return.html
+++ b/web/web/js/jskey/demo/jskey_dialog_demo_return.html
@@ -10,6 +10,7 @@
 	</style>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<script type="text/javascript">
+		parent.$jskey.dialog.returnValue = {hello:'不是关闭按钮的值喔'};
 		function getReturnValue()
 		{
 			try
