--- a/web/web/js/jskey/demo/jskey_tooltip_demo.html
+++ b/web/web/js/jskey/demo/jskey_tooltip_demo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html></html>
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <script type="text/javascript" src="../../jquery/jquery.js"></script>
