--- a/web/web/js/jskey/demo/jskey_dialog_demo.html
+++ b/web/web/js/jskey/demo/jskey_dialog_demo.html
@@ -17,6 +17,9 @@
 		$jskey.dialog.callback = function(){
 			alert('返回值是:' + ($jskey.dialog.returnValue.hello));
 		};
+		function mycallback(){
+			alert("这个是自定义函数喔！" + '返回值是:' + ($jskey.dialog.returnValue.hello));
+		};
 	</script>
 </head>
 <body>
@@ -28,6 +31,7 @@
 	
 	<br /><hr /><br />
 	<input type="button" value="对话框" onclick="$jskey.dialog.showDialog({title:'我的标题', url:'jskey_dialog_demo_return.html',args:{v:1}});" /> 绝对路径<br />
+	<input type="button" value="对话框" onclick="$jskey.dialog.showDialog({callback:mycallback,title:'我的标题', url:'jskey_dialog_demo_return.html',args:{v:1}});" /> 绝对路径（自定义函数）<br />
 	<br /><hr /><br />
 
 	<div class="title">window.showModalDialog</div>
