--- a/DsCommon/web/manage/frame/middle.html
+++ b/DsCommon/web/manage/frame/middle.html
@@ -27,6 +27,7 @@ function frameGoBack(){
 //document.oncontextmenu = new Function("return false");
 var navigation=new Navigation("mynav");
 </script>
+<!--[if IE 6]><style>#rightFrame {height:expression(document.body.clientHeight-25);}</style><![endif]-->
 </head>
 <body onselectstart="return false;" oncontextmenu="return false;">
 <table id="oTable" width="100%" height="100%" class="middleframe" border="0" cellpadding="0" cellspacing="0">
