--- a/DsCommon/web/manage/frame/main.html
+++ b/DsCommon/web/manage/frame/main.html
@@ -1,7 +1,9 @@
+
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<style type="text/css">html,body{height:100%;}</style>
 </head>
-<body>
+<body style="background:url(/web/themes/default/index.jpg) no-repeat center center fixed;">
 </body>
 </html>
