--- a/DsCommon/web/manage/frame/bottom.html
+++ b/DsCommon/web/manage/frame/bottom.html
@@ -1,8 +1,8 @@
 ﻿<html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" type="text/css" href="style/frame.css" />
-	<title></title>
+<meta charset="UTF-8" />
+<link rel="stylesheet" type="text/css" href="style/frame.css" />
+<title></title>
 </head>
 <body onselectstart="return false;" oncontextmenu="return false;">
 <div class="bottomframe">
