--- a/DsCommon/web/manage/frame/index.html
+++ b/DsCommon/web/manage/frame/index.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>首页</title>
-	<meta http-equiv="pragma" content="no-cache">
-	<meta http-equiv="cache-control" content="no-cache">
-	<meta http-equiv="expires" content="0">
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>首页</title>
+<meta http-equiv="pragma" content="no-cache">
+<meta http-equiv="cache-control" content="no-cache">
+<meta http-equiv="expires" content="0">
+<meta charset="UTF-8" />
 </head>
 <frameset id="fk" name="fk" rows="104,*,24" cols="*" frameborder="no" border="0" framespacing="0">
 	<frame src="top.html" id="topFrame" name="topFrame" scrolling="no" noresize="noresize"/>
