--- a/DsCommon/web/manage/frame/left.html
+++ b/DsCommon/web/manage/frame/left.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title></title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta charset="UTF-8" />
 <link rel="stylesheet" type="text/css" href="js/jskey/themes/menu/jskey.menu.css" />
 <script type="text/javascript" src="js/jskey/jskey.menu.js"></script>
 <script type="text/javascript" src="js/showNavigation.js"></script>
