--- a/DsCommon/web/manage/frame/main.html
+++ b/DsCommon/web/manage/frame/main.html
@@ -4,6 +4,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <style type="text/css">html,body{height:100%;}</style>
 </head>
-<body style="background:url(/web/themes/default/index.jpg) no-repeat center center fixed;">
+<body style="background:url(/web/share/index.jpg) no-repeat center center fixed;">
 </body>
 </html>
