--- a/DsCommon/web/manage/frame/middle.html
+++ b/DsCommon/web/manage/frame/middle.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta charset="UTF-8" />
 <title></title>
 <link rel="stylesheet" type="text/css" href="style/frame.css" />
 <script type="text/javascript" src="js/Navigation.js"></script>
