--- a/DsCommon/web/manage/frame/top.html
+++ b/DsCommon/web/manage/frame/top.html
@@ -4,7 +4,7 @@
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+<meta charset="UTF-8" />
 <link rel="stylesheet" type="text/css" href="style/frame.css" />
 <script type="text/javascript">
 function reload()
