--- a/DsCommon/web/manage/frame/left.html
+++ b/DsCommon/web/manage/frame/left.html
@@ -11,7 +11,7 @@
 </body>
 <script type="text/javascript">
 	var jsonData = treedata;
-	$jskey.menu.root = "./DsCommon";
+	$jskey.menu.root = "/DsCommon";
 	//$jskey.menu.show(jsonData, false);// 可打开多个
 	$jskey.menu.show(jsonData, true);// 只能打开一个，删掉<!DOCTYPE html>则会其余最会置底
 	$jskey.menu.clickBar(0);
