--- a/DsCommon/web/manage/frame/main.html
+++ b/DsCommon/web/manage/frame/main.html
@@ -4,6 +4,6 @@
 <meta charset="UTF-8" />
 <style type="text/css">html,body{height:100%;}</style>
 </head>
-<body style="background:url(../web/share/index.jpg) no-repeat center bottom fixed;">
+<body style="background:url(/web/share/index.jpg) no-repeat center bottom fixed;">
 </body>
 </html>
