--- a/web/web/js/jskey/demo/jskey_tooltip_demo.html
+++ b/web/web/js/jskey/demo/jskey_tooltip_demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta charset="UTF-8" />
 <script type="text/javascript" src="../../jquery/jquery.js"></script>
 <script type="text/javascript" src="../jskey_core.js"></script>
 <style type="text/css"> td{padding:10px;}</style>
