--- a/web/web/js/jskey/demo/jskey_validator_demo.html
+++ b/web/web/js/jskey/demo/jskey_validator_demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta charset="UTF-8" />
 <script type="text/javascript" src="../jskey_core.js"></script>
 <script type="text/javascript">
 function myfn(value)// value是表单中的值，只有这个参数
