--- a/DsCommon/web/login.html
+++ b/DsCommon/web/login.html
@@ -29,7 +29,7 @@ input{width:180px;height:30px;border:#BAC7D2 solid 1px;vertical-align:middle;bac
 .button{width:120px;height:40px;line-height:40px;border-radius:4px;cursor:pointer;}
 </style>
 </head>
-<body onload="$('txtAccount').focus();">
+<body onload="$('account').focus();">
 <div class="content">
   <div class="title">广州市Anything系统综合服务平台</div>
   <form id="v" action="loginAction.jsp" method="post">
