--- a/web/web/js/secret/des.html
+++ b/web/web/js/secret/des.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8" />
 <script type="text/javascript" src="des.js"></script>
 <script type="text/javascript">
 function doDes(type, encid, decid){
