--- a/web/web/js/secret/des.html
+++ b/web/web/js/secret/des.html
@@ -8,10 +8,10 @@ function doDes(type, encid, decid){
 	var key = document.getElementById("key").value;
 	var e = document.getElementById(encid), d = document.getElementById(decid);
 	if(type){
-		d.value = encodeDes(e.value, key);// ¼ÓÃÜ
+		d.value = encodeDes(e.value, key);// åŠ å¯†
 	}
 	else{
-		e.value = decodeDes(d.value, key);// ½âÃÜ
+		e.value = decodeDes(d.value, key);// è§£å¯†
 	}
 }
 </script>
@@ -22,15 +22,15 @@ function doDes(type, encid, decid){
 <body>
 <br /><br />
 <div style="margin:0 auto;text-align:center;">
-	ÃÜÔ¿£º<input type="text" id="key" style="width:200px;" value="test" />
+	å¯†é’¥ï¼š<input type="text" id="key" style="width:200px;" value="test" />
 	<br />
-	Ã÷ÎÄ£º<input type="text" id="v1" style="width:250px;" value="ÎÒÊÇÃ÷ÎÄ" />
-	<input type="button" value="=&gt;¼ÓÃÜ=&gt;" onclick="doDes(true, 'v1', 'v2');" />
-	ÃÜÎÄ£º<input type="text" id="v2" readonly="readonly" style="width:250px;" value="" />
+	æ˜æ–‡ï¼š<input type="text" id="v1" style="width:250px;" value="æˆ‘æ˜¯æ˜æ–‡" />
+	<input type="button" value="=&gt;åŠ å¯†=&gt;" onclick="doDes(true, 'v1', 'v2');" />
+	å¯†æ–‡ï¼š<input type="text" id="v2" readonly="readonly" style="width:250px;" value="" />
 	<br />
-	ÃÜÎÄ£º<input type="text" id="v4" style="width:250px;" value="112664A0739B43AC" />
-	<input type="button" value="=&gt;½âÃÜ=&gt;" onclick="doDes(false, 'v3', 'v4');" />
-	Ã÷ÎÄ£º<input type="text" id="v3" readonly="readonly" style="width:250px;" value="" />
+	å¯†æ–‡ï¼š<input type="text" id="v4" style="width:250px;" value="112664A0739B43AC" />
+	<input type="button" value="=&gt;è§£å¯†=&gt;" onclick="doDes(false, 'v3', 'v4');" />
+	æ˜æ–‡ï¼š<input type="text" id="v3" readonly="readonly" style="width:250px;" value="" />
 </div>
 </body>
 </html>
