--- a/web/web/js/jskey/demo/jskey_base64.html
+++ b/web/web/js/jskey/demo/jskey_base64.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<script type="text/javascript" src="../jskey.base64.js"></script>
+<script type="text/javascript" src="../jskey_base64.js"></script>
 <script type="text/javascript">
 function doDes(type, encid, decid){
 	var e = document.getElementById(encid), d = document.getElementById(decid);
