--- a/web/web/js/jskey/demo/jskey_validator_demo.html
+++ b/web/web/js/jskey/demo/jskey_validator_demo.html
@@ -19,6 +19,9 @@ function check(type)
 	alert("验证通过");
 }
 </script>
+<style type="text/css">
+td {text-align:left;}
+</style>
 </head>
 <body>
 <center>
@@ -32,14 +35,14 @@ function check(type)
 需要修改显示信息的，增加msg和alertMsg属性即可自定义提示信息
 <br />
 <div id="dataForm">
-<table border="0" cellspacing="1" cellpadding="0" class="listTable" style="width:600px;">
+<table border="0" cellspacing="1" cellpadding="0" class="listTable" style="width:800px;">
 	<tr>
 		<td style="width:30%;">作用</td>
 		<td style="width:70%;">示例</td>
 	</tr>
 	<tr>
 		<td>英文字母、数字、下划线</td>
-		<td><input type="text" name="TestChar" dataType="Char" value="" /></td>
+		<td><input type="text" name="TestChar" dataType="Char" value="" onfocus="$jskey.$('mv').innerHTML='我是旧的onfocus';" onblur="$jskey.$('mv').innerHTML='我是旧的onblur';" /><span id="mv"></span></td>
 	</tr>
 	<tr>
 		<td>英文字母、数字、下划线</td>
@@ -185,4 +188,7 @@ function check(type)
 </div>
 </center>
 </body>
+<script type="text/javascript">
+$jskey.validator.Init("dataForm", 3);//初始化验证
+</script>
 </html>
