--- a/web/web/js/jskey/demo/jskey_validator_demo_jquery.html
+++ b/web/web/js/jskey/demo/jskey_validator_demo_jquery.html
@@ -190,6 +190,6 @@ td {text-align:left;}
 </center>
 </body>
 <script type="text/javascript">
-$jskey.validator.Init("dataForm", 3);//初始化验证
+//$jskey.validator.Init("dataForm", 3);//一开始就要即时验证的话，调用此方法
 </script>
 </html>
