--- a/DsEp/web/login.html
+++ b/DsEp/web/login.html
@@ -57,7 +57,7 @@ a {color:#0000ff;font-size:12px;font-weight:normal;line-height:40px;font-family:
 </div>
 <div style="margin:0px auto;border-top:solid #ccc 1px;width:1000px;color:#333;text-align:center;font-size:12px;font-weight:normal;line-height:40px;font-family:Arial;">
 	&copy; 2014 skey_chen@163.com
-	&nbsp;&nbsp;<a href="logpwd.html">忘记密码?</a>
+	&nbsp;&nbsp;<a href="passport/pwd.html">忘记密码?</a>
 	
 	<br />&nbsp;&nbsp;<a href="do.jsp?v=1">系统管理</a>
 	&nbsp;&nbsp;<a href="do.jsp?v=2">企业管理</a>
