--- a/DsEp/web/login.html
+++ b/DsEp/web/login.html
@@ -59,9 +59,9 @@ a {color:#0000ff;font-size:12px;font-weight:normal;line-height:40px;font-family:
 	&copy; 2014 skey_chen@163.com
 	&nbsp;&nbsp;<a href="passport/pwd.html">忘记密码?</a>
 	
-	<br />&nbsp;&nbsp;<a href="do.jsp?v=1">系统管理</a>
-	&nbsp;&nbsp;<a href="do.jsp?v=2">企业管理</a>
-	&nbsp;&nbsp;<a href="do.jsp?v=3">普通用户</a>
+	<br />&nbsp;&nbsp;<a href="do.jsp?v=-1">系统管理</a>
+	&nbsp;&nbsp;<a href="do.jsp?v=0">企业用户</a>
+	&nbsp;&nbsp;<a href="do.jsp?v=1">个人用户</a>
 </div>
 </body>
 </html>
