--- a/DsEp/web/loginEp.html
+++ b/DsEp/web/loginEp.html
@@ -35,9 +35,9 @@ a {color:#0000ff;font-size:12px;font-weight:normal;line-height:40px;font-family:
 <body onload="$('account').focus();">
 <div class="content">
   <div class="title">系统名称</div>
-  <form id="v" action="loginAction.jsp" method="post">
+  <form id="v" action="loginAction.jsp?logintype=0" method="post">
   <div class="login">
-	<div class="loginTit">用户登录</div>
+	<div class="loginTit">企业用户登录</div>
 	<div class="box">
 		用户名 <input type="text" title="账号" id="account" name="account" value="" />
 	</div>
@@ -57,7 +57,9 @@ a {color:#0000ff;font-size:12px;font-weight:normal;line-height:40px;font-family:
 </div>
 <div style="margin:0px auto;border-top:solid #ccc 1px;width:1000px;color:#333;text-align:center;font-size:12px;font-weight:normal;line-height:40px;font-family:Arial;">
 	Copyright &copy; 2014 skey_chen@163.com
-	<br />&nbsp;&nbsp;<a href="do.jsp?v=-1">测试登录</a>
+	&nbsp;&nbsp;<a href="passport/pwdEp.html">忘记密码?</a>
+	<br />
+	&nbsp;&nbsp;<a href="do.jsp?v=0">测试登录（企业）</a>
 </div>
 </body>
 </html>
