--- a/DsEp/web/passport/password.html
+++ b/DsEp/web/passport/password.html
@@ -45,9 +45,7 @@ var m = [
   </form>
 </div>
 <div style="margin:0px auto;border-top:solid #ccc 1px;width:1000px;color:#333;text-align:center;font-size:12px;font-weight:normal;line-height:40px;font-family:Arial;">
-	&copy; 2014 skey_chen@163.com
-	&nbsp;&nbsp;<a href="../login.html">登录</a>
-	&nbsp;&nbsp;<a href="pwd.html">找回密码</a>
+	Copyright &copy; 2014 skey_chen@163.com
 </div>
 </body>
 <script type="text/javascript">init();</script>
