--- a/DsEp/web/passport/pwdEp.html
+++ b/DsEp/web/passport/pwdEp.html
@@ -14,7 +14,7 @@ var m = [
 <body onload="$('account').focus();">
 <div class="content">
   <div class="title">找回密码</div>
-  <form id="v" action="pwdAction.jsp" method="post">
+  <form id="v" action="pwdEpAction.jsp" method="post">
   <div class="login">
 	<div class="box">
 		<label>&nbsp;</label>请输入您的账号/邮箱<br />
@@ -33,9 +33,9 @@ var m = [
   </form>
 </div>
 <div style="margin:0px auto;border-top:solid #ccc 1px;width:1000px;color:#333;text-align:center;font-size:12px;font-weight:normal;line-height:40px;font-family:Arial;">
-	&copy; 2014 skey_chen@163.com
-	&nbsp;&nbsp;<a href="../login.html">登录</a>
-	&nbsp;&nbsp;<a href="password.html">重置密码</a>
+	Copyright &copy; 2014 skey_chen@163.com
+	&nbsp;&nbsp;<a href="../loginEp.html">登录</a>
+	&nbsp;&nbsp;<a target="_blank" href="password.html">重置密码</a>
 </div>
 </body>
 <script type="text/javascript">init();</script>
