--- a/DsEp/web/login.html
+++ b/DsEp/web/login.html
@@ -58,6 +58,9 @@ a {color:#0000ff;font-size:12px;font-weight:normal;line-height:40px;font-family:
 <div style="margin:0px auto;border-top:solid #ccc 1px;width:1000px;color:#333;text-align:center;font-size:12px;font-weight:normal;line-height:40px;font-family:Arial;">
 	Copyright &copy; 2014 skey_chen@163.com
 	<br />&nbsp;&nbsp;<a href="do.jsp?v=-1">测试登录</a>
+	&nbsp;&nbsp;<a href="login.html">（系统）</a>
+	&nbsp;&nbsp;<a href="loginEp.html">（企业）</a>
+	&nbsp;&nbsp;<a href="loginPerson">（个人）</a>
 </div>
 </body>
 </html>
