--- a/DsEp/web/loginEp.html
+++ b/DsEp/web/loginEp.html
@@ -60,6 +60,9 @@ a {color:#0000ff;font-size:12px;font-weight:normal;line-height:40px;font-family:
 	&nbsp;&nbsp;<a href="passport/pwdEp.html">忘记密码?</a>
 	<br />
 	&nbsp;&nbsp;<a href="do.jsp?v=0">测试登录（企业）</a>
+	&nbsp;&nbsp;<a href="login.html">（系统）</a>
+	&nbsp;&nbsp;<a href="loginEp.html">（企业）</a>
+	&nbsp;&nbsp;<a href="loginPerson">（个人）</a>
 </div>
 </body>
 </html>
