--- a/DsEp/web/loginPerson.html
+++ b/DsEp/web/loginPerson.html
@@ -62,7 +62,7 @@ a {color:#0000ff;font-size:12px;font-weight:normal;line-height:40px;font-family:
 	&nbsp;&nbsp;<a href="do.jsp?v=1">测试登录（个人）</a>
 	&nbsp;&nbsp;<a href="login.html">（系统）</a>
 	&nbsp;&nbsp;<a href="loginEp.html">（企业）</a>
-	&nbsp;&nbsp;<a href="loginPerson">（个人）</a>
+	&nbsp;&nbsp;<a href="loginPerson.html">（个人）</a>
 </div>
 </body>
 </html>
