--- a/web/web/js/jskey/demo/jskey_validator_demo.html
+++ b/web/web/js/jskey/demo/jskey_validator_demo.html
@@ -150,7 +150,7 @@ td {text-align:left;}
 			运动<input name="Favorite" value="1" type="checkbox" />
 			上网<input name="Favorite" value="2" type="checkbox" />
 			音乐<input name="Favorite" value="3" type="checkbox" />
-			看书<input name="Favorite" value="4" type="checkbox"" dataType="Group" min="2" max="3"  msg="必须选择2~3种爱好" />
+			看书<input name="Favorite" value="4" type="checkbox" dataType="Group" min="2" max="3"  msg="必须选择2~3种爱好" />
 		</td>
 	</tr>
 	<tr>
