--- a/web/web/js/jskey/demo/jskey_tooltip_demo.html
+++ b/web/web/js/jskey/demo/jskey_tooltip_demo.html
@@ -60,7 +60,7 @@ $(function() {
 			<a id="south" href="#" title="南方提示">南方</a>
 		</td>
 		<td>
-			<a id="south-east" href="#" title="东南方向<br /><input type="text" /> 提\n示">东南</a>
+			<a id="south-east" href="#" title="东南方向<br /><input type='text' /> 提\n示">东南</a>
 		</td>
 	</tr>
 </table>
