--- a/DsEp/web/login.html
+++ b/DsEp/web/login.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
+<title></title>
 <script type="text/javascript" src="/web/js/jskey/jskey_des.js"></script>
 <script type="text/javascript">
 function $(id){return document.getElementById(id);}
@@ -46,7 +47,7 @@ a {color:#0000ff;font-size:12px;font-weight:normal;line-height:40px;font-family:
 	</div>
 	<div class="box">
 		验证码 <input type="text" placeholder="验证码" id="authcode" name="authcode" maxlength="4" class="code" value="" />
-		<img src='./ValidCode?width=90&height=38' style="cursor:pointer;vertical-align:middle;" onclick="this.src='./ValidCode?width=90&height=38&id=' + Math.random();" />
+		<img id="pv" src="" style="cursor:pointer;vertical-align:middle;" onclick="this.src='./ValidCode?width=90&height=38&id=' + Math.random();" />
 	</div>
 	<div class="box">
 		<input type="button" class="button" style="background-color:#00a0f0;color:#fff;" value="登 录" onclick="doclick()" />
@@ -63,4 +64,7 @@ a {color:#0000ff;font-size:12px;font-weight:normal;line-height:40px;font-family:
 	&nbsp;&nbsp;<a href="loginPerson.html">（个人）</a>
 </div>
 </body>
+<script type="text/javascript">
+$('pv').click();
+</script>
 </html>
