--- a/web/web/js/jskey/themes/dialog/jskey_choose_key.html
+++ b/web/web/js/jskey/themes/dialog/jskey_choose_key.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8" />
 <title></title>
 <style>html,body,iframe{width:100%;height:100%;margin:0px;padding:0px;overflow:hidden;}</style>
 <script type="text/javascript">
