--- a/web/web/js/jskey/themes/dialog/jskey_dialog.html
+++ b/web/web/js/jskey/themes/dialog/jskey_dialog.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8" />
 <title></title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <style>html,body,iframe{width:100%;height:100%;margin:0px;padding:0px;overflow:hidden;}</style>
 <script type="text/javascript">
 var winArgs={args:{data:{}},url:"about:blank",title:"Window"};
