--- a/DsEp/web/passport/pwdPerson.html
+++ b/DsEp/web/passport/pwdPerson.html
@@ -23,7 +23,7 @@ var m = [
 	</div>
 	<div class="box">
 		<label>&nbsp;</label><input type="text" placeholder="验证码" id="authcode" name="authcode" maxlength="4" class="code" value="" />
-		<img src='../ValidCode?width=90&height=38' style="cursor:pointer;vertical-align:middle;" onclick="this.src='./ValidCode?width=90&height=38&id=' + Math.random();" />
+		<img src='../ValidCode?width=90&height=38' style="cursor:pointer;vertical-align:middle;" onclick="this.src='../ValidCode?width=90&height=38&id=' + Math.random();" />
 		<span id="v2"></span>
 	</div>
 	<div class="boxc">
