--- a/web/web/js/jskey/demo/jskey_calendar_demo.htm
+++ b/web/web/js/jskey/demo/jskey_calendar_demo.htm
@@ -21,15 +21,15 @@ input {width:205px; cursor:pointer; margin : 1px 0px 1px 0px;}
 <input type="text" value="" class="WebDate" id="Text1" onclick="$jskey.calendar.show('Text1', {})" readonly="true" title="" />show('Text1', {})<br />
 <input type="text" value="" class="WebDate" onclick="$jskey.calendar.show('', {object:this})" readonly="true" title="" />show('', {object:this})<br />
 <input type="text" value="" class="WebDate" id="Text2" onclick="$jskey.calendar.show('', {id:'Text2'})" readonly="true" title="" />show('', {id:'Text2'})<br />
-<input type="text" value="1000-06-11 15:58:35" class="WebDate" onclick="$jskey.calendar.show(this, {lang:0,format:'yyyy-MM-dd HH:mm:ss.SSS',show:'yyyy-MM-dd HH:mm.ss'})" readonly="true" title="yyyy-MM-dd HH:mm.ss.SSS" />show(this, {lang:0,format:'yyyy-MM-dd HH:mm:ss.SSS',show:'yyyy-MM-dd HH:mm.ss'})<br />
-<input type="text" value="2014-11-11 11:59:59" class="WebDate" onclick="$jskey.calendar.show(this, {min:'2014-11-12 09:10:11',max:'2015-01-25 15:10:11',lang:0,format:'yyyy-MM-dd HH:mm:ss',show:'yyyy-MM-dd HH:mm.ss'})" readonly="true" title="yyyy-MM-dd HH:mm.ss.SSS" />show(this, {min:'2014-11-12 09:10:11',max:'2015-01-25 15:10:11',lang:0,format:'yyyy-MM-dd HH:mm:ss',show:'yyyy-MM-dd HH:mm.ss'})<br />
+<input type="text" value="1000-06-11 15:58:35" class="WebDate" onclick="$jskey.calendar.show(this, {lang:0,format:'yyyy-MM-dd HH:mm:ss',show:'yyyy-MM-dd HH:mm.ss'})" readonly="true" title="yyyy-MM-dd HH:mm.ss" />show(this, {lang:0,format:'yyyy-MM-dd HH:mm:ss',show:'yyyy-MM-dd HH:mm.ss'})<br />
+<input type="text" value="2014-11-11 11:59:59" class="WebDate" onclick="$jskey.calendar.show(this, {min:'2014-11-12 15:47:24',max:'2015-03-25 09:10:11',lang:0,format:'yyyy-MM-dd HH:mm:ss',show:'yyyy-MM-dd HH:mm.ss'})" readonly="true" title="yyyy-MM-dd HH:mm.ss" />show(this, {min:'2014-11-12 15:47:24',max:'2015-03-25 09:10:11',lang:0,format:'yyyy-MM-dd HH:mm:ss',show:'yyyy-MM-dd HH:mm.ss'})<br />
 
 <br />
 <input type="text" value="jsjs" class="WebDate" onclick="$jskey.calendar.show(this, {format:'yyyy-MM-dd W',show:'yyyy'})" readonly="true" title="yyyy" />show(this, {format:'yyyy-MM-dd W',show:'yyyy'})<br />
 <input type="text" value="2004-06" class="WebDate" onclick="$jskey.calendar.show(this, {lang:1,format:'yyyy-MM',show:'yyyy-MM'})" readonly="true" title="yyyy-MM" />show(this, {lang:1,format:'yyyy-MM',show:'yyyy-MM'})<br />
 <input type="text" value="2007-06-11" class="WebDate" onclick="$jskey.calendar.show(this, {skin:'gray',format:'yyyy/MM/dd 周w 第W周',show:'yyyy-MM-dd',left:5,top:-10})" readonly="true" title="yyyy/MM/dd 周w 第W周" />show(this, {skin:'gray',format:'yyyy/MM/dd 周w 第W周',show:'yyyy-MM-dd',left:5,top:-10})<br />
 
-<input type="text" value="2003-06-11 15:58:35" class="WebDate" onclick="$jskey.calendar.show(this, {skin:'lightGreen',lang:0,format:'yyyy-MM-dd HH:mm:ss.SSS',show:'yyyy-MM-dd HH:mm.ss'})" readonly="true" title="yyyy-MM-dd HH:mm.ss.SSS" />show(this, {skin:'lightGreen',lang:0,format:'yyyy-MM-dd HH:mm:ss.SSS',show:'yyyy-MM-dd HH:mm.ss'})<br />
+<input type="text" value="9999-06-11 15:58:35.000" class="WebDate" onclick="$jskey.calendar.show(this, {skin:'lightGreen',lang:0,format:'yyyy-MM-dd HH:mm:ss.SSS',show:'yyyy-MM-dd HH:mm.ss'})" readonly="true" title="yyyy-MM-dd HH:mm.ss.SSS" />show(this, {skin:'lightGreen',lang:0,format:'yyyy-MM-dd HH:mm:ss.SSS',show:'yyyy-MM-dd HH:mm.ss'})<br />
 
 <select><option>ddddddddddddddddddddddd</option></select>
 		</td>
@@ -48,7 +48,7 @@ input {width:205px; cursor:pointer; margin : 1px 0px 1px 0px;}
  * @param object/id args1替代参数：{object:input对象} 或 {id:'input的ID'}上面未列出
  * @param skin String "default" 值为内部变量config的skin中配置的皮肤
  * @param show/sample String 取值 "yyyy-MM-dd HH:mm:ss" 或 "yyyy-MM-dd HH:mm" 或 "yyyy-MM-dd HH" 或 "yyyy-MM-dd" 或 "yyyy-MM" 或 "yyyy"
- * @param min String "yyyy-MM-dd HH:mm:ss"，可选最小值，默认"1900-01-01 00:00:00"
+ * @param min String "yyyy-MM-dd HH:mm:ss"，可选最小值，默认"0100-01-01 00:00:00"
  * @param max String "yyyy-MM-dd HH:mm:ss"，可选最大值，默认"9999-12-31 23:59:59"
  * @param lang Integer 0(中文)|1(英语) 可自由扩充
  * @param left Integer 相对X坐标,相对于文本框的横向偏移量
