--- a/DsEp/web/passport/password.html
+++ b/DsEp/web/passport/password.html
@@ -7,44 +7,37 @@
 <script type="text/javascript">
 var m = [
 	{id:"account",s:"v1",v:"账号不能为空",c:/\S+/}
-	,{id:"code",s:"v2",v:"验证码不能为空",c:/[^\s]{4}/}
+	,{id:"code",s:"v2",v:"验证码输入错误",c:/[^\s]{4}/}
 	,{id:"p1",s:"v3",v:"不能少于6位，不能是纯数字",f:function(){return !(/^(([A-Z]*|[a-z]*|\d*|[-_\~!@#\$%\^&\*\.\(\)\[\]\{\}<>\?\\\/\'\"]*)|.{0,5})$|\s/.test($('p1').value));}}
 	,{id:"p2",s:"v4",v:"两次输入的密码不一致",f:function(){return $('p1').value == $('p2').value;}}
 ];
 </script>
+<!--[if IE 6]><style>.cp{position:absolute;left:0;top:expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.offsetHeight-parseInt(this.currentStyle.marginTop)-parseInt(this.currentStyle.marginBottom)))}</style><![endif]-->
 </head>
 <body onload="$('account').focus();">
-<div class="content">
-  <div class="title">重置密码</div>
-  <form id="v" action="passwordAction.jsp" method="post">
-  <div class="login">
+<div class="title">重置密码</div>
+<div class="view">
+<form id="v" action="passwordAction.jsp" method="post">
+<div class="login">
+	<div class="box"><span id="v1"></span><div class="vbox">
+		　　账号<input type="text" id="account" name="account" value="" />
+	</div></div>
+	<div class="box"><span id="v2"></span><div class="vbox">
+		　验证码<input type="text" id="code" name="code" value="" />
+	</div></div>
+	<div class="box"><span id="v3"></span><div class="vbox">
+		　新密码<input type="password" id="p1" name="password" maxlength="32" value="" />
+	</div></div>
+	<div class="box"><span id="v4"></span><div class="vbox">
+		确认密码<input type="password" id="p2" value="" />
+	</div></div>
 	<div class="box">
-		<label>账号</label>
-		<input type="text" placeholder="账号" title="账号" id="account" name="account" value="" />
-		<span id="v1">请输入您的账号</span>
+		<input type="button" class="button" value="提 交" onclick="doclick()" />
 	</div>
-	<div class="box">
-		<label>账号验证码</label>
-		<input type="text" placeholder="账号验证码" title="账号验证码" id="code" name="code" value="" />
-		<span id="v2"></span>
-	</div>
-	<div class="box">
-		<label>新密码</label>
-		<input type="password" placeholder="新密码" id="p1" name="password" maxlength="32" value="" />
-		<span id="v3"></span>
-	</div>
-	<div class="box">
-		<label>确认密码</label>
-		<input type="password" placeholder="确认密码" id="p2" value="" />
-		<span id="v4"></span>
-	</div>
-	<div class="boxc">
-		<input type="button" class="button" style="background-color:#00a0f0;color:#fff;" value="提交" onclick="doclick()" />
-	</div>
-  </div>
-  </form>
 </div>
-<div style="margin:0px auto;border-top:solid #ccc 1px;width:1000px;color:#333;text-align:center;font-size:12px;font-weight:normal;line-height:40px;font-family:Arial;">
+</form>
+</div>
+<div class="cp">
 	Copyright &copy; 2014 skey_chen@163.com
 </div>
 </body>
