--- a/DsEp/web/passport/password.html
+++ b/DsEp/web/passport/password.html
@@ -12,7 +12,6 @@ var m = [
 	,{id:"p2",s:"v4",v:"两次输入的密码不一致",f:function(){return $('p1').value == $('p2').value;}}
 ];
 </script>
-<!--[if IE 6]><style>.cp{position:absolute;left:0;top:expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.offsetHeight-parseInt(this.currentStyle.marginTop)-parseInt(this.currentStyle.marginBottom)))}</style><![endif]-->
 </head>
 <body onload="$('account').focus();">
 <div class="title">重置密码</div>
@@ -38,7 +37,7 @@ var m = [
 </form>
 </div>
 <div class="cp">
-	Copyright &copy; 2014 skey_chen@163.com
+	Copyright &copy; 2014-2015 skey_chen@163.com
 </div>
 </body>
 <script type="text/javascript">init();</script>
