--- a/DsEp/web/login.html
+++ b/DsEp/web/login.html
@@ -35,7 +35,7 @@ a {color:#0000ff;font-size:12px;font-weight:normal;line-height:40px;font-family:
 </head>
 <body onload="$('account').focus();">
 <div class="content">
-  <div class="title">系统名称</div>
+  <div class="title">计算机管理控制程序</div>
   <form id="v" action="loginAction.jsp" method="post">
   <div class="login">
 	<div class="loginTit">用户登录</div>
@@ -57,11 +57,12 @@ a {color:#0000ff;font-size:12px;font-weight:normal;line-height:40px;font-family:
   </form>
 </div>
 <div style="margin:0px auto;border-top:solid #ccc 1px;width:1000px;color:#333;text-align:center;font-size:12px;font-weight:normal;line-height:40px;font-family:Arial;">
-	Copyright &copy; 2014 skey_chen@163.com
-	<br />&nbsp;&nbsp;<a href="do.jsp?v=-1">测试登录</a>
-	&nbsp;&nbsp;<a href="login.html">（系统）</a>
-	&nbsp;&nbsp;<a href="loginEp.html">（企业）</a>
-	&nbsp;&nbsp;<a href="loginPerson.html">（个人）</a>
+	<a href="do.jsp?v=-1">测试登录【系统】</a>
+	&nbsp;&nbsp;Copyright &copy; 2014-2015 skey_chen@163.com
+	<br />
+	&nbsp;&nbsp;<a href="login.html">【系统】</a>
+	&nbsp;&nbsp;<a href="loginEp.html">【企业】</a>
+	&nbsp;&nbsp;<a href="loginPerson.html">【个人】</a>
 </div>
 </body>
 </html>
