--- a/DsEp/web/passport/password.html
+++ b/DsEp/web/passport/password.html
@@ -8,8 +8,8 @@
 var m = [
 	{id:"account",s:"v1",v:"账号不能为空",c:/\S+/}
 	,{id:"code",s:"v2",v:"验证码输入错误",c:/[^\s]{4}/}
-	,{id:"p1",s:"v3",v:"不能少于6位，不能是纯数字",f:function(){return !(/^(([A-Z]*|[a-z]*|\d*|[-_\~!@#\$%\^&\*\.\(\)\[\]\{\}<>\?\\\/\'\"]*)|.{0,5})$|\s/.test($('p1').value));}}
-	,{id:"p2",s:"v4",v:"两次输入的密码不一致",f:function(){return $('p1').value == $('p2').value;}}
+	,{id:"p1",s:"v3",v:"不少于6位，不能纯数字",f:function(){return !(/^(([A-Z]*|[a-z]*|\d*|[-_\~!@#\$%\^&\*\.\(\)\[\]\{\}<>\?\\\/\'\"]*)|.{0,5})$|\s/.test($('p1').value));}}
+	,{id:"p2",s:"v4",v:"与新密码不一致",f:function(){return $('p1').value == $('p2').value;}}
 ];
 </script>
 </head>
@@ -18,17 +18,17 @@ var m = [
 <div class="view">
 <form id="v" action="passwordAction.jsp" method="post">
 <div class="login">
-	<div class="box"><span id="v1"></span><div class="vbox">
-		　　账号<input type="text" id="account" name="account" value="" />
+	<div class="box"><div class="vbox">
+		<span id="v1"></span>&nbsp;　　账号<input type="text" id="account" name="account" value="" />
 	</div></div>
-	<div class="box"><span id="v2"></span><div class="vbox">
-		　验证码<input type="text" id="code" name="code" value="" />
+	<div class="box"><div class="vbox">
+		<span id="v2"></span>&nbsp;　验证码<input type="text" id="code" name="code" value="" />
 	</div></div>
-	<div class="box"><span id="v3"></span><div class="vbox">
-		　新密码<input type="password" id="p1" name="password" maxlength="32" value="" />
+	<div class="box"><div class="vbox">
+		<span id="v3"></span>&nbsp;　新密码<input type="password" id="p1" name="password" maxlength="32" value="" />
 	</div></div>
-	<div class="box"><span id="v4"></span><div class="vbox">
-		确认密码<input type="password" id="p2" value="" />
+	<div class="box"><div class="vbox">
+		<span id="v4"></span>&nbsp;确认密码<input type="password" id="p2" value="" />
 	</div></div>
 	<div class="box">
 		<input type="button" class="button" value="提 交" onclick="doclick()" />
