--- a/DsEp/web/passport/password.html
+++ b/DsEp/web/passport/password.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0" /> 
 <link rel="stylesheet" href="passport.css" />
 <script type="text/javascript" src="passport.js"></script>
 <script type="text/javascript">
@@ -37,7 +38,7 @@ var m = [
 </form>
 </div>
 <div class="cp">
-	Copyright &copy; 2014-2015 skey_chen@163.com
+	2014-2015 &copy; skey_chen@163.com
 </div>
 </body>
 <script type="text/javascript">init();</script>
