--- a/DsDemo/DemoJava/web/manage/ajax/getDemo.html
+++ b/DsDemo/DemoJava/web/manage/ajax/getDemo.html
@@ -3,9 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <title></title>
-<link rel="stylesheet" type="text/css" href="/web/js/easyui/themes/default/easyui.css" />
-<link rel="stylesheet" type="text/css" href="/web/themes/default/frame.css" />
-<script type="text/javascript" src="/web/js/require.js" data-main="main.js"></script>
+<script type="text/javascript" src="/web/js/require.js" data-main="main.js?id=2"></script>
 <style>.bottomTable{padding:0;margin:0;width:100%;position:fixed;left:0;bottom:0;border-top:#c2c2c2 solid 1px;}.listTable{margin-bottom:35px;}</style>
 <!--[if IE 6]><style>.bottomTable{position:absolute;left:0;top:expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.offsetHeight-parseInt(this.currentStyle.marginTop)-parseInt(this.currentStyle.marginBottom)))}</style><![endif]-->
 <script type="text/javascript">
