--- a/DsDemo/DemoJava/web/manage/ajax/getDemo.html
+++ b/DsDemo/DemoJava/web/manage/ajax/getDemo.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8" />
 <title></title>
 <script type="text/javascript" src="/web/js/require.js"></script>
-<script type="text/javascript" src="main.js?i=1"></script>
+<script type="text/javascript" src="main.js"></script>
 <style>.bottomTable{padding:0;margin:0;width:100%;position:fixed;left:0;bottom:0;border-top:#c2c2c2 solid 1px;}.listTable{margin-bottom:35px;}</style>
 <!--[if IE 6]><style>.bottomTable{position:absolute;left:0;top:expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.offsetHeight-parseInt(this.currentStyle.marginTop)-parseInt(this.currentStyle.marginBottom)))}</style><![endif]-->
 <script type="text/javascript">
 // 扩展菜单写法
-require(['dswork.get'], function(g) {
+require(['dswork.get'], function() {
 $dswork.page.join = function(td, menu, id){
 	$(menu).append($('<div iconCls="menuTool-user">自定义</div>').bind("click", function(){
 		location.href = "getDemoById.htm?page=${pageModel.currentPage}&keyIndex=" + id;
